--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/express": "^4.17.6",
     "@types/node": "^14.0.13",
     "@types/socket.io": "^2.1.8",
-    "@types/socket.io-client": "^1.4.33"
+    "@types/socket.io-client": "^1.4.33",
+    "@types/youtube": "0.0.39"
   }
 }
